Keyboard improvements + generics (#209)
* Keyboard improvements + generics

* Applied review comments